resources/css/bootstrap.css
/* ... */
@keyframes slideOutUp {
    from {
        -webkit-transform: translate3d(0, 0, 0);
        transform: translate3d(0, 0, 0);
    }

    to {
        visibility: hidden;
        -webkit-transform: translate3d(0, -100%, 0);
        transform: translate3d(0, -100%, 0);
    }
}

.animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

.animated.fast {
    -webkit-animation-duration: 800ms;
    animation-duration: 800ms;
}

.animated.slow {
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
}

.animated.slower {
    -webkit-animation-duration: 3s;
    animation-duration: 3s;
}

@media (print), (prefers-reduced-motion) {
    .animated {
        -webkit-animation: unset !important;
        animation: unset !important;
        -webkit-transition: none !important;
        transition: none !important;
    }
}

/**
 * Owl Carousel v2.3.4
 * Copyright 2013-2018 David Deutsch
 * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
 */
@keyframes fadeOut {
    0% {
        opacity: 1
    }

    100% {
        opacity: 0
    }
}

@font-face {
    font-family: 'themify';
    src: url('../fonts/themify9f24.eot?-fvbane');
    src: url('../fonts/themifyd41d.eot?#iefix-fvbane') format('embedded-opentype'),
        url('../fonts/themify9f24.woff?-fvbane') format('woff'),
        url('../fonts/themify9f24.ttf?-fvbane') format('truetype'),
        url('../fonts/themify9f24.svg?-fvbane#themify') format('svg');
    font-weight: normal;
    font-style: normal;
}

[class^="ti-"], [class*=" ti-"] {
    font-family: 'themify';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;

    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.ti-tablet:before {
    content: "\e609";
}

.ti-search:before {
    content: "\e610";
}

.ti-arrow-right:before {
    content: "\e628";
}

.ti-arrow-left:before {
    content: "\e629";
}

.ti-heart:before {
    content: "\e634";
}

.ti-export:before {
    content: "\e63e";
}

.ti-comment:before {
    content: "\e644";
}

.ti-angle-right:before {
    content: "\e649";
}

.ti-home:before {
    content: "\e69b";
}

.ti-headphone-alt:before {
    content: "\e719";
}

.ti-skype:before {
    content: "\e72d";
}

.ti-instagram:before {
    content: "\e73d";
}

.ti-facebook:before {
    content: "\e741";
}

.ti-twitter-alt:before {
    content: "\e74b";
}

.ti-email:before {
    content: "\e75a";
}

@font-face {
    font-family: 'Linearicons-Free';
    src: url('../fonts/Linearicons-Free54e9.eot?w118d');
    src: url('../fonts/Linearicons-Freed41d.eot?#iefixw118d') format('embedded-opentype'),
        url('../fonts/Linearicons-Free54e9.woff2?w118d') format('woff2'),
        url('../fonts/Linearicons-Free54e9.woff?w118d') format('woff'),
        url('../fonts/Linearicons-Free54e9.ttf?w118d') format('truetype'),
        url('../fonts/Linearicons-Free54e9.svg?w118d#Linearicons-Free') format('svg');
    font-weight: normal;
    font-style: normal;
}

.lnr {
    font-family: 'Linearicons-Free';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;

    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.lnr-arrow-right:before {
    content: "\e87a";
}

input:focus {
    outline: none;
}

.button {
    float: right;
    height: 38px;
    width: 38px;
    line-height: 38px;
    background: -moz-linear-gradient(-90deg, rgb(249, 250, 252) 0%, rgb(249, 234, 184) 100%);
    background: -webkit-linear-gradient(-90deg, rgb(249, 250, 252) 0%, rgb(249, 234, 184) 100%);
    background: -ms-linear-gradient(-90deg, rgb(249, 250, 252) 0%, rgb(249, 234, 184) 100%);
    text-align: center;
    font-size: 14px;
    color: #FDF6E3;
    border-radius: 50%;
    box-shadow: 3.536px 3.536px 10px 0px rgba(0, 0, 0, 0.1);
}

